--- a/Sustav_LU/nbproject/private/private.properties
+++ b/Sustav_LU/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\nenab\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+file.reference.sqlite-jdbc-3.36.0.1.jar=C:\\Users\\gabrijela\\Desktop\\jar_files\\sqlite-jdbc-3.36.0.1.jar
+user.properties.file=C:\\Users\\gabrijela\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
